2006-10-10 Patrick Galbraith <patg@patg.net> (3.0008)
* Added multiple fixes to dbd_st_prepare which fixed variable overwrite
  and unset increment counter. Also improved loop which checks statements
  for presence of "LIMIT" by using a pointer as opposed to char array
  increment variable. These errors were showing up in OpenBSD and other
  Unixen (which I think all BSD-based) (Thanks to Kyle George!)
* Added fix to Makefile.PL to obtain correct build flags on VMS (Thanks to Eric Milkie!)
* Fixed declaration of "row" in mysql_st_internal_execute which caused compile 
  errors on some platforms
* Fixed casting of num_params to unsigned int in calls to NewZ in mysql.xs
* Fixed typo in Makefile.PL for test_user which was supposed to be testuser

2006-09-08 Jim Winstead <jimw@mysql.com>, Patrick Galbraith <patg@mysql.com>
(3.0007) (3.0006 is the same as 3.0005)
  * Make sure to call dbd_st_finish when all rows from a statement handle
    have been fetched. (Bug #20153, Bug# 21607, as rt.cpan.org ticket #s
    20464, 21241) Jim Winstead
  * Patch from Steve Hay to fix bind_param to deal properly with insertion
    of a NULL into an INT or DOUBLE column using server-side prepare.
    Converted Steve's dbi.pl script to expose this problem to 40bindparam2
    test.
  * Fix to mysql_st_internal_execute to keep from passing undefined dbh
    handle member (bind_type_guessing) to parse_param causing crash on
    OpenBSD. Reported on rt.cpan.org (#20868) by Kyle Georg, as well as
    info from Sam Smith and Federico Giannici
  * Cleaned up tests to make sure test table is dropped at end of test.


2006-06-10 Patrick Galbraith <patg@mysql.com) (3.0005)
  * Fix dbd_st_finish in 3.0004 didn't clean up bind buffers resulting in
    a memory leak. See eg/prepare_memory_usage.pl to see how this manifests
    itself. Thanks to Jason Snell for giving me a good script to reproduce
    this!
  * Fix to parse_params, mysql.xs dbh->do, and bind_param to deal with