@@ -9,7 +9,7 @@ use DynaLoader();
 use Carp ();
 @ISA = qw(DynaLoader);
 
-$VERSION = '3.0008';
+$VERSION = '3.0009';
 
 bootstrap DBD::mysql $VERSION;
 
